--- a/thinking-in-spring/pom.xml
+++ b/thinking-in-spring/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>thinking-in-spring</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>dependency-lookup</module>
+        <module>ioc-container-overview</module>
     </modules>
     <packaging>pom</packaging>
 
