--- a/sharding-read-write/pom.xml
+++ b/sharding-read-write/pom.xml
@@ -40,22 +40,14 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.1.1</version>
+            <version>3.4.0</version>
         </dependency>
-        <!--shardingsphere start-->
-        <!-- for spring boot -->
+        <!--shardingsphere-->
         <dependency>
-            <groupId>io.shardingsphere</groupId>
+            <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>3.1.0</version>
+            <version>4.1.1</version>
         </dependency>
-        <!-- for spring namespace -->
-        <dependency>
-            <groupId>io.shardingsphere</groupId>
-            <artifactId>sharding-jdbc-spring-namespace</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-        <!--shardingsphere end-->
         <!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
